--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,9 +1,9 @@
 button {
   color:aquamarine;
-  background-color:darkgoldenrod;
+  background-color: burlywood;
   border: 1px solid black;
   border-radius: 10px;
-  font-size: 1.5rem;
+  font-size: 2rem;
   text-shadow: 2px 2px 5px black;
   box-shadow: 10px 10px 24px 0px rgba(0,0,0,0.75);
 -webkit-box-shadow: 10px 10px 24px 0px rgba(0,0,0,0.75);
@@ -11,7 +11,7 @@ button {
 }
 
 h3 {
-  color: white;
+  color: aquamarine;
   font-size: 2rem;
   text-shadow: 2px 2px 5px black;
 }
